# tdc-assistant-desktop

./: .env.example  README.md  setup.cfg
src/tdc_assistant_desktop/: app.py
src/tdc_assistant_desktop/commands/: __init__.py  create_chat_completion.py  create_chat_completion_mock_controller.py  create_code_editor.py  create_image_capture.py  create_word_processor.py  end_session.py  find_chat_log_by_id.py  insert_code_editor.py  request_chat_completion_approval.py  run.py  scrape_code_editors.py  scrape_public_chat.py  scrape_screenshare.py  scrape_word_processors.py  send_chat_completion.py  send_message.py  send_text_to_code_editor.py
src/tdc_assistant_desktop/config/: __init__.py  config.py  env.py
src/tdc_assistant_desktop/domain/: __init__.py  create_code_editor_payload.py  event.py  update_editor_payload.py  update_word_processor_payload.py
src/tdc_assistant_desktop/event_handlers/: __init__.py  base_event_handler.py  chat_completion_ready_event_handler.py  chat_update_event_handler.py  editors_update_event_handler.py  screenshare_update_event_handler.py  word_processors_update_event_handler.py
src/tdc_assistant_desktop/events/: __init__.py  base_event.py  chat_update_event.py  event.py
src/tdc_assistant_desktop/observers/: __init__.py  base_observer.py  chat_completion_ready_observer.py  code_editors_observer.py  public_chat_observer.py  screenshare_observer.py  word_processors_observer.py
src/tdc_assistant_desktop/store/: __init__.py  local_store.py
src/tdc_assistant_desktop/tasks/: __init__.py  base_task.py  check_code_editors_task.py  (+11 more)
(+7 files in other folders)
