[metadata]
name = tdc-assistant-desktop
version = 0.0.1
url = https://github.com/c-c-ca/tdc-assistant-desktop
author = Adam Carter
author_email = adm.carter@gmail.com
description = A tool for automating the TDC Classroom Desktop App
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >= 3.9
install_requires =
    tdc_assistant_client==0.0.1
    tdc_assistant_gui_controller_v2=0.0.1
    python-dotenv=1.0.0

[options.packages.find]
where = src
exclude =
    test*